# rinklabs

./: .gitignore  README.md  docker-compose.yml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py
apps/api/scripts/: seed_dev.py  seed_fake_data.py
apps/api/src/: config.py  database.py  main.py
apps/api/src/auth/: __init__.py
apps/api/src/models/: __init__.py  game.py  odds_snapshot.py  user.py
apps/api/src/providers/: __init__.py  base.py  the_odds_api.py
apps/api/src/routers/: __init__.py  games.py  health.py  markets.py  users.py  webhooks.py
apps/api/src/scheduler/: __init__.py  jobs.py
apps/api/src/schemas/: __init__.py  game.py  odds.py
apps/api/src/services/: __init__.py  ingestion.py  odds_calculator.py
apps/api/tests/: test_odds_calculator.py
apps/web/: .env.example  package-lock.json  package.json  tailwind.config.ts
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/account/: page.tsx
apps/web/src/app/api/create-checkout-session/: route.ts
apps/web/src/app/pro/: page.tsx
apps/web/src/components/: DisagreementCard.tsx  EdgeCard.tsx  LockedCard.tsx  MovementSparkline.tsx  Navbar.tsx  OddsTable.tsx  QueryProvider.tsx  SubscriptionGate.tsx
apps/web/src/lib/: api.ts  utils.ts
docs/plans/: 2026-02-21-hockey-market-intelligence-design.md  2026-02-21-hockey-market-intelligence-implementation-part2.md  2026-02-21-hockey-market-intelligence-implementation.md
(+4 files in other folders)
